Fix style css gap space and max width

--- a/dragon-game/css/styles.css
+++ b/dragon-game/css/styles.css
@@ -25,7 +25,7 @@ body {
 }
 
 #game {
-  max-width: 500px;
+  max-width: 80dvw;
   max-height: 400px;
   background-color: var(--color-white);
   color: var(--color-white);
@@ -37,7 +37,7 @@ body {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
-  row-gap: 5px;
+  gap: 5px 5px;
 }
 
 #controls,
